Sorgente/src/objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>Prezzo_al_professional__c</fullName>
        <label>Prezzo al professional</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Punti_consiglio__c</fullName>
        <label>Punti consiglio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_al_prezzo_per_professional__c</fullName>
        <label>Sconto al prezzo per professional</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Soglia_sconto__c</fullName>
        <label>Soglia sconto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>